--- a/Threading/Threading.csproj
+++ b/Threading/Threading.csproj
@@ -135,6 +135,7 @@
             <DependentUpon>ViewController.cs</DependentUpon>
         </Compile>
         <Compile Include="Utilities\Sequencer.cs" />
+        <Compile Include="Utilities\Producer.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
